fix(docs-infra): improve legibility and focus on content (#40427)
This commit changes the layout of the main content to improve
legibility, especially on wider screens:

- Limit main content width to 50em (800px by default).
- Center main content on the page.


PR Close #40427

--- a/aio/src/styles/1-layouts/_footer.scss
+++ b/aio/src/styles/1-layouts/_footer.scss
@@ -13,6 +13,7 @@ footer {
 
     & > * {
       color: $white;
+      max-width: 50em;
     }
   }
 
@@ -56,7 +57,7 @@ footer {
 
   p {
     text-align: center;
-    margin: 10px 0px 5px;
+    margin: 10px auto 5px;
 
     @media (max-width: 480px) {
       text-align: left;
@@ -69,7 +70,7 @@ footer {
     display: flex;
     justify-content: center;
     text-align: left;
-    margin: 0 0 40px;
+    margin: 0 auto 40px;
 
     ul {
       list-style-position: inside;
